<resources>
    <string name="app_name">Equality IAS</string>
    <string name="organization">Equality \nEmpowerment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Test Prep</string>
    <string name="nav_header_subtitle">Equality Empowerment</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="practice">Practice</string>
    <string name="quiz">Quick Quiz</string>
    <string name="model_tests">Model Tests</string>
    <string name="overview">Overview</string>
    <string name="home">Home</string>
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="rateus">Rate Us</string>
    <string name="donate">Donate</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>@string/practice</item>
        <item>@string/quiz</item>
        <item>@string/model_tests</item>
        <item>@string/stats</item>
        <item>@string/settings</item>
        <item>@string/feedback</item>
        <item>@string/rateus</item>
        <item>@string/donate</item>
    </string-array>

    <string-array name="connecting_colors">
        <item>@color/colorOrange</item>
        <item>@color/colorGreen</item>
        <item>@color/colorOrange</item>
        <item>@color/colorGreen</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="optionA">A</string>
    <string name="optionB">B</string>
    <string name="optionC">C</string>
    <string name="optionD">D</string>

    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <string name="question_image">QuestionImage</string>
    <string name="remaining_time">Time Remaining:</string>

    <string name="sample_quote">Sample Quote</string>
    <string name="sample_author">Unknown</string>
    <string name="sample_wish">Good Morning!</string>

    <string name="nothing_to_show">Nothing to show in this section yet!\n Come back later</string>

    <string name="quick_quiz">Take a Quiz</string>

    <!-- results -->
    <string name="your_score">You Scored:</string>
    <string name="sample_score"> </string>
    <string name="your_answer">Your Answer:</string>

    <string name="image_description">Image Description</string>
    <string name="cancel">" Cancel "</string>
    <string name="title_activity_login">Sign in</string>
    <string name="terms_conditions"><u>Terms and Conditions</u></string>

    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="your_name">Your Name</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_short_name">This name is too short</string>
    <string name="error_invalid_name">This name is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="instructions">Instructions</string>
    <string name="dontshow">Don\'t show this again</string>

    <string-array name="quiz_exit">
        <item>Save quiz status</item>
        <item>Exit without saving</item>
    </string-array>
</resources>
