<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_home"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/home" />
    </group>

    <group
        android:id="@+id/menu_study"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_practice"
            android:icon="@drawable/nav_practice"
            android:title="@string/practice" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/nav_timer"
            android:title="@string/quick_quiz" />
        <item
            android:id="@+id/nav_modeltest"
            android:icon="@drawable/nav_modeltest"
            android:title="@string/model_tests" />

    </group>


    <group
        android:id="@+id/menu_misc"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/nav_stats2"
            android:title="@string/stats" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/nav_settings"
            android:title="@string/settings" />

    </group>

    <group
        android:id="@+id/menu_communicate"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/nav_feedback"
            android:title="@string/feedback" />

        <item
            android:id="@+id/nav_rateus"
            android:icon="@drawable/nav_rateus"
            android:title="@string/rateus" />

        <!--<item-->
        <!--android:id="@+id/nav_donate"-->
        <!--android:icon="@drawable/nav_donate"-->
        <!--android:title="Donate" />-->

    </group>

</menu>
