<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground2"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:indeterminate="false"
        android:theme="@style/ProgressBarStyle" />

    <RelativeLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50sp"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/eeImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:contentDescription="@null"
            android:gravity="center_vertical"
            android:src="@drawable/ee_icon" />

        <TextView
            android:id="@+id/appNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/eeImageView"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorOrange"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/eeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/appNameTextView"
            android:gravity="center"
            android:text="@string/organization"
            android:textColor="@color/colorGreen"
            android:textSize="14sp" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp">

        <LinearLayout
            android:id="@+id/signInLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/newRegisterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@android:color/transparent"
                android:text="@string/register"
                android:layout_gravity="right"
                android:textAllCaps="false"
                android:textColor="@color/colorTextView"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailSignInEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorOrange"
                android:textColorHint="@color/colorOrange"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Remember Me"
                android:textColor="@color/colorTextView"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/signInButton"
                android:layout_width="100sp"
                android:layout_height="40dp"
                android:layout_marginTop="25sp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_drawable"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/colorOrange"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/registerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/newSignInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15sp"
                android:background="@android:color/transparent"
                android:text="@string/sign_in"
                android:layout_gravity="right"
                android:textAllCaps="false"
                android:textColor="@color/colorTextView"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameRegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30sp"
                android:layout_marginEnd="30sp"
                android:gravity="center"
                android:hint="@string/your_name"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:textColor="@color/colorOrange"
                android:textColorHint="@color/colorOrange"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailRegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorOrange"
                android:textColorHint="@color/colorOrange"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/terms_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_gravity="center"
                android:autoLink="all"
                android:linksClickable="false"
                android:padding="@dimen/padding_5sp"
                android:selectAllOnFocus="false"
                android:text="@string/terms_conditions"
                android:textColor="@color/colorTextView"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="100sp"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_drawable"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/colorOrange"
                android:textSize="16sp" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>