<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_home_wish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_16sp"
        android:layout_marginStart="@dimen/padding_8sp"
        android:layout_marginEnd="@dimen/padding_8sp"
        android:paddingBottom="@dimen/padding_8sp"
        android:text="@string/sample_wish"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/big_font"
        android:gravity="center" />

    <View style="@style/HomeDivider"/>

    <TextView
        android:id="@+id/tv_home_quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16sp"
        android:layout_marginStart="@dimen/padding_8sp"
        android:layout_marginEnd="@dimen/padding_8sp"
        android:textAlignment="center"
        android:text="@string/sample_quote"
        android:textStyle="italic"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/medium2_font"/>

    <TextView
        android:id="@+id/tv_home_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_8sp"
        android:layout_marginStart="@dimen/padding_8sp"
        android:layout_marginEnd="@dimen/padding_8sp"
        android:text="@string/sample_author"
        android:textSize="@dimen/medium_font"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:gravity="end"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="E-mail"
        android:textColor="@android:color/black"
        android:textSize="@dimen/big_font"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="@dimen/big_font"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textColor="@android:color/black"
        android:textSize="@dimen/big_font"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="@dimen/big_font"/>

    <Button
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="signin"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>
</LinearLayout>